[tool.poetry]
name = "htmx-demo"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
locust = "^2.14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
